# notebook

./: .gitignore  05A_ObjectDetection_RCNN.ipynb  05C_ObjectDetection_SSD.ipynb  PyQt4.ipynb  argparse.ipynb  bash_script.md  bazel.md  caffe.md  cpp_build.md  docker.md  eigen.md  gdb.md  git.md  github_actions.md  iSCSI_target.md  jenkins.md  matplotlib.ipynb  numpy.ipynb  operator.md  pandas.ipynb  pathlib.ipynb  plotly.ipynb  pyopencv.ipynb  python-requests.ipynb  pytorch.ipynb  requests.ipynb  sed.md  socket_connection.md  stl.md  subprocess.ipynb  ubuntu.md  vuetify.md
boost/: asio.md  bimap.md  program_option.md
can/: CMakeLists.txt  README.md  activate_vcan  activate_vcan.sh  can_read.cpp  can_write.cpp
can/async_socket_can/: CMakeLists.txt  async_socket_can.cpp  async_socket_can.h  can_message.cpp  can_message.h  main.cpp
can/async_socket_can/test/: CMakeLists.txt  async_socket_can_test.cpp
machine_learning/: finetune.ipynb
pytorch/: 01_TensorOperation.ipynb  02_NeuralNetworksBasics.ipynb  04_PreTrainedModel.ipynb  05C_ObjectDetection_SSD.ipynb  06_SemanticSegmentation_PSPNet.ipynb  07A_ImageGeneration_DCGAN.ipynb  07B_ImageGeneration_SAGAN.ipynb  08A_AnomalyDetection_AnoGAN.ipynb  08B_AnormalyDetection_EfficientGAN.ipynb  21_VisionTransformer.ipynb  22_SwinTransformer.ipynb  23_CLIP.ipynb
pytorch/utils/ssd/: augmentations.py  box_utils.py
statistic/: error_ellipse.ipynb
